fixed button tap on iphone

--- a/ps/css/style.css
+++ b/ps/css/style.css
@@ -406,7 +406,7 @@ ul#footer-nav li {
 	font-size:160px;
 	padding:0;
 }
-#complete a{
+#complete button{
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
@@ -426,7 +426,7 @@ ul#footer-nav li {
 	outline:none;
 	background:#fff;
 }
-/*#complete a:hover{background:#00aeef; color:#fff; border:2px solid  #00aeef;}*/
+#complete button:hover{background:#00aeef; color:#fff; border:2px solid  #00aeef;}
 
 
 /** Featuers and Question boxes ============================= **/
